# DexStrike

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dexstrike/: apktool.py  cli.py  detector.py  device.py  frida.py  license_check.py  manifest.py  menu.py  pull.py  report.py  signer.py  smali.py  splits.py  state.py  utils.py
dexstrike/assets/frida/: config.js
resources/: key.jks
scripts/: build_images.sh  generate_assets.py  install-arch-deps.sh  run.sh
tests/: conftest.py  test_detector.py  test_frida_script_mode.py  test_license_check.py  test_manifest.py  test_smali.py  test_splits.py  test_state.py
