[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dexstrike"
version = "0.1.0"
description = "Toolkit em Python para automatizar o fluxo de engenharia reversa autorizada de APKs Android: decompile, patch de Manifest, Frida Gadget, rebuild e assinatura."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Wesley Ruan" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
dexstrike = "dexstrike.cli:main"

[tool.setuptools]
packages = ["dexstrike"]

[tool.setuptools.package-data]
dexstrike = ["assets/frida/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
